# pyedb-core

./: .env.test.example  .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  index.html  install_update_edb_protoc_lib.bat  install_update_edb_protoc_lib.bat.bak  performance-test.py  pyproject.toml  robots.txt  sitemap.xml  test_hfss_pi_simulation_settings.py  test_pyedb.sh  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci_cd.yml  template.yml
doc/: .vale.ini  Makefile  make.bat
doc/source/: conf.py  contribute.rst  index.rst  installation.rst
doc/source/api/: cell.rst  database.rst  definition.rst  geometry.rst  glossary.rst  hierarchy.rst  index.rst  layer.rst  layout.rst  layout_instance.rst  net.rst  primitive.rst  release_notes.rst  session.rst  simulation_setup.rst  terminal.rst  utility.rst
doc/source/examples/: examples.rst  index.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: user_guide.rst
doc/styles/Ansys/: accept.txt
examples/: Cutout_region.py  PolygonOperations.py  backend_usage_examples.py  transformations.py
examples/helpers/: plot.py  setup.py
notebooks/: 3d_comp_placement.ipynb  Cutout_region.ipynb  Define_and_assign_bondwire_profiles.ipynb  Move_geometry_from_existing_layer_to_new_layer.ipynb  PolygonOperations.ipynb  Remove_all_geometry_and_layers_below_L2.ipynb  Siwave_SI_project.ipynb  assign_ds_model.ipynb  change_capacitor_models.ipynb  example_3dcomp_placement.ipynb  example_Define_and_assign_bondwire_profiles.ipynb  example_Move_geometry_from_existing_layer_to_new_layer.ipynb  hfss_si_project_setup.ipynb  plot_nets.ipynb  remove_unconnected_nets.ipynb  stackup_export.ipynb  template.ipynb  unite_meshed_ground.ipynb  visualize_operations.ipynb
notebooks/assign_ds_model.aedb/: edb.def
notebooks/data/meshed_ground.aedb/: edb.def.bak
notebooks/fixtures/3d_comp_placement/: 3d_comp_placement.a3dcomp
notebooks/helpers/: example_setup.ipynb  example_teardown.ipynb  plot.ipynb
protos/: README.rst  setup.py
protos/requirements/: requirements_build.txt
requirements/: requirements_build.txt  requirements_doc.txt  requirements_notebook.txt  requirements_tests.txt  requirements_tox.txt
scripts/: bootstrap.ps1  bootstrap.sh  cleanipynb.py
scripts/proto_parser/: generate_rpc_info.py  parse_protos.sh
src/: ansys_edb_core_preload.pth  ansys_edb_core_preload.py
src/ansys/edb/: __init__.py  database.py  edb_defs.py  session.py
tests/: conftest.py  settings.py  test_arc_data.py  test_database.py  test_metadata.py  test_point_data.py  test_terminals.py
tests/backends/: conftest.py  test_arc_backends.py  test_backends.py  test_point_backends.py  test_polygon_backends.py
tests/backends/utils/: __init__.py  fixtures.py
tests/e2e/: conftest.py  settings.py  test_cell.py
tests/e2e/integration_tests/: conftest.py  test_comp_props.py  test_component_group.py  test_ic_component.py  test_padstack.py  test_primitive.py  test_siwave_simulation_setup.py  test_spiral_inductor.py
tests/e2e/scratch/: io_performance_scratch.py  sandbox.py  sim_setup_scratch.py  test_board_bend_def.py  test_component_property.py  test_power_module.py  test_rpc_executor.py  test_value.py  value_scratch.py
tests/e2e/unit_tests/: test_cell.py  test_edge_terminal.py  test_layer_collection.py  test_layout_instance.py  test_session.py
tests/examples/: conftest.py  test_spiral_inductor.py
tests/mock/: test_arc_data.py  test_database.py  test_metadata.py  test_point_data.py  test_terminals.py
tests/mock/utils/: fixtures.py  test_utils.py
tests/utils/: arm_settings.xml  filesystem.py  fixtures.py  test_utils.py
version/: index.html
version/0.1/: .buildinfo  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/_sources/: contribute.rst.txt
version/0.1/_static/: search.json
version/0.1/api/: database.html  definition.html  geometry.html  glossary.html  hierarchy.html  index.html  layer.html  layout.html  layout_instance.html  net.html  primitive.html  release_notes.html  session.html  simulation_setup.html  terminal.html  utility.html
version/0.1/examples/: announcement.html  index.html
version/0.1/getting_started/: index.html
version/0.1/user_guide/: announcement.html  index.html
version/0.2/: announcement.html  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/_static/: search.json
version/0.2/api/: database.html  definition.html  geometry.html  glossary.html  hierarchy.html  index.html  layer.html  layout.html  layout_instance.html  net.html  primitive.html  release_notes.html  session.html  simulation_setup.html  terminal.html  utility.html
version/0.2/examples/: index.html
version/0.2/getting_started/: index.html
version/0.2/user_guide/: index.html
version/0.3/: index.html  search.html
version/0.3/_sources/: contribute.rst.txt
version/0.3/api/: database.html  definition.html  hierarchy.html  index.html  layer.html  layout.html  net.html  release_notes.html  session.html  simulation_setup.html  terminal.html
version/dev/: .buildinfo  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/_static/: documentation_options.js  search.json
version/dev/api/: database.html  definition.html  geometry.html  glossary.html  hierarchy.html  index.html  layer.html  layout.html  layout_instance.html  net.html  primitive.html  release_notes.html  session.html  simulation_setup.html  terminal.html  utility.html
version/dev/examples/: index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: .buildinfo  contribute.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/stable/_static/: search.json
version/stable/api/: database.html  definition.html  geometry.html  glossary.html  hierarchy.html  index.html  layer.html  layout.html  layout_instance.html  net.html  primitive.html  release_notes.html  (+4 more)
(+28565 files in other folders)
