[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-edb-core"
version = "0.3.0.dev7"
description = "A python wrapper for Ansys Edb service"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"}]
maintainers = [{name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]


dependencies = [
    "ansys-api-edb==0.3.dev5",
    "protobuf>=5.29.6,<7",
    "grpcio>=1.44.0",
    "ansys-tools-common>=0.3.1"
]

[project.urls]
Documentation = "https://edb.core.docs.pyansys.com"
Source = "https://github.com/ansys/pyedb-core"
Homepage = "https://github.com/ansys/pyedb-core"
Tracker = "https://github.com/ansys/pyedb-core/issues"

# FIXME: add versions
[project.optional-dependencies]
notebook = [
    "notebook",
    "matplotlib",
    "ipynbname"
]
# FIXME: update to newer versions
tests = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "tox",
]
# FIXME: update to newer versions
doc = [
    "sphinx==7.4.7",
    "numpydoc==1.9.0",
    "ansys_sphinx_theme>=0.12.2",
    "sphinx-copybutton==0.5.2",
]

[tool.scikit-build]
# Include the pure-Python source tree alongside the compiled extension.
wheel.packages = ["src/ansys"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.edb"]

[tool.coverage.report]
show_missing = true
